--- a/05.md
+++ b/05.md
@@ -1,5 +1,6 @@
-// @flow
+### Disjoint unions
 
+```flow js
 type SuccessResponse = {|
   success: true,
   data: {
@@ -17,8 +18,10 @@ type ErrorResponse = {|
 
 type Response = SuccessResponse | ErrorResponse;
 // Указываем строгие типы, тогда будет точно определен тип Response
+// и в условие if не будет ошибки
 function handleResponse(response: Response) {
   if (response.error) {
     console.log(response.data.includes('ServerError'));
   }
 }
+```
