--- a/06.md
+++ b/06.md
@@ -1,5 +1,6 @@
-// @flow
+### Классы
 
+```flow js
 interface Loggable {
   log(level: string): string
 }
@@ -16,3 +17,4 @@ const r: Loggable = {
     return level;
   }
 }
+```
